--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 *{
 	margin:0;
 	padding: 0;
-	font-family: 'Josefin Sans', sans-serif;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #nav-bar
